@@ -482,6 +482,13 @@ Using the ScriptBlock parameter, one can achieve equivalent functionality by cal
         <command:parameterValue required="true" variableLength="false">Func[String, Boolean]</command:parameterValue>
       </command:parameter>
       <command:parameter required="false" variableLength="false" globbing="false" pipelineInput="false" position="named">
+        <maml:name>ValidationHandler</maml:name>
+        <maml:description>
+          <maml:para>Specifies a ScriptBlock that is called from ValidateAndAcceptLine.  If a non-null object is returned or an exception is thrown, validation fails and the error is reported.  If the object returned/thrown has a Message property, it's value is used in the error message, and if there is an Offset property, the cursor is moved to that offset after reporting the error.  If there is no Message property, the ToString method is called to report the error.</maml:para>
+        </maml:description>
+        <command:parameterValue required="true" variableLength="false">Func[String, Object]</command:parameterValue>
+      </command:parameter>
+      <command:parameter required="false" variableLength="false" globbing="false" pipelineInput="false" position="named">
         <maml:name>HistorySearchCursorMovesToEnd</maml:name>
         <maml:description>
           <maml:para></maml:para>
@@ -738,6 +745,17 @@ Using the ScriptBlock parameter, one can achieve equivalent functionality by cal
       <dev:defaultValue>None</dev:defaultValue>
     </command:parameter>
     <command:parameter required="false" variableLength="false" globbing="false" pipelineInput="false" position="named">
+      <maml:name>ValidationHandler</maml:name>
+      <maml:description>
+          <maml:para>Specifies a ScriptBlock that is called from ValidateAndAcceptLine.  If a non-null object is returned or an exception is thrown, validation fails and the error is reported.  If the object returned/thrown has a Message property, it's value is used in the error message, and if there is an Offset property, the cursor is moved to that offset after reporting the error.  If there is no Message property, the ToString method is called to report the error.</maml:para>
+      </maml:description>
+      <command:parameterValue required="true" variableLength="false">Func[String, Object]</command:parameterValue>
+      <dev:type>
+        <maml:name>Func[String, String]</maml:name>
+        <maml:uri/>
+      </dev:type>
+      <dev:defaultValue>None</dev:defaultValue>
+    </command:parameter>    <command:parameter required="false" variableLength="false" globbing="false" pipelineInput="false" position="named">
       <maml:name>HistorySearchCursorMovesToEnd</maml:name>
       <maml:description>
         <maml:para></maml:para>
